--- a/templates/test.html
+++ b/templates/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head >
-soemt
+This is test.html
 <body>
     
 </body>
